# PentedLearningLatest

./: README.md  build.gradle  google-services.json  gradle.properties  settings.gradle  upload_certificate.pem
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/pented/learningapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/pented/learningapp/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/pented/learningapp/activity/: ChapterWithAnimation2ActivityBackup.kt  ChapterWithAnimationActivity.kt  NotificationActivity.kt
app/src/main/java/com/pented/learningapp/adapter/: ChaptersAdapter.kt  ChaptersAdapterApi.kt  EarlierNotificationsAdapter.kt  NewNotificationsAdapter.kt  PageAdapter.kt  PlanetAdapter.kt  PlanetAdapterNew.kt  SubjectAdapter.kt  TopicsAdapter.kt  TopicsAdapterApi.kt
app/src/main/java/com/pented/learningapp/amazonS3/: S3Constants.java  S3Util.java
app/src/main/java/com/pented/learningapp/authScreens/: GetStartedActivity.kt  OTPActivity.kt  RegisterYourselfActivity.kt  RegisterYourselfSecondActivity.kt  YourSecurityQuestionActivity.kt
app/src/main/java/com/pented/learningapp/base/: BaseActivity.kt  BaseArrayResponse.java  BaseFragment.kt  BaseResponse.java  BaseViewModel.kt  BindingAdapter.kt  Error.kt
app/src/main/java/com/pented/learningapp/enum/: notificationTypes.kt
app/src/main/java/com/pented/learningapp/fcm/: FCMNotificationData.kt  MyFirebaseMessagingService.kt  MyWorker.kt
app/src/main/java/com/pented/learningapp/helper/: AppSignatureHelper.java  BindingUtils.kt  Constants.kt  CustomCountDownTimer.java  CustomHandler.kt  CustomTrackSelectionDialogBuilder.java  CustomTrackSelectionView.java  Event.kt  EventMultiple.kt  EventObserver.kt  JustCopyItVIewModel.kt  MainChipViewAdapter.java  MyHandler.java  SharedPrefs.kt  (+3 more)
app/src/main/res/anim/: bounce.xml  top_to_visible.xml
app/src/main/res/drawable/: animated_button_bg.xml  badge_bg.xml  badge_four.xml  badge_one.xml  badge_three.xml  badge_two.xml  below_bg.xml  bottom_bg.xml  btn_download_pdf_now.xml  btn_next.xml  button_bg.xml  button_bg_red.xml  button_next_question.xml  chip_bg.xml  edit_section_bg.xml  edittext_bg.xml  english.xml  fill_copylink_bg.xml  free.xml  gray_rounded_.xml  green_card_bg.xml  hindi.xml  ic_account_circle.xml  ic_active_dot.xml  ic_add_photo.xml  ic_ask_doubts_img.xml  ic_back_noti.xml  ic_blue_world.xml  ic_bottom_navigation_bg.xml  ic_calculater.xml  ic_calculator.xml  ic_calendar.xml  ic_call.xml  ic_camera_alt.xml  ic_card_giftcard.xml  ic_chapter_bg.xml  ic_chapter_bg_new.xml  ic_checked_green.xml  ic_circle_blue_big.xml  ic_circle_blue_small.xml  (+97 more)
app/src/main/res/layout/: activity_chapter_with_animation.xml  activity_chapter_with_animation2.xml  activity_edit_profile.xml  activity_edit_profile_details.xml  activity_exam_blueprints.xml  activity_filter.xml  activity_get_started.xml  activity_imp_question_video_list.xml  activity_imp_question_video_list_new.xml  activity_imp_subjects.xml  activity_live_classes.xml  activity_main.xml  activity_notification.xml  activity_notification_new.xml  activity_other_user_profile.xml  activity_otpactivity.xml  activity_paper_listing.xml  activity_pdf_viewer.xml  activity_question_answer.xml  activity_register_yourself.xml  activity_register_yourself_second.xml  activity_solution.xml  activity_subject.xml  activity_subscription.xml  activity_topic_video_list.xml  activity_watch_scanned_video.xml  activity_watch_solution_video.xml  activity_watch_video.xml  activity_web_view.xml  activity_weekend_test_series.xml  activity_your_security_question.xml  activity_youtube_player.xml  crop_image_activity.xml  crop_image_view.xml  dialog_bottom_choose.xml  dialog_congratulations.xml  dialog_congratulations_register.xml  dialog_delete_account.xml  dialog_information_app.xml  dialog_login_again.xml  (+63 more)
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/raw/: shine.json
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-gu/: strings.xml
app/src/main/res/values-hi-rIN/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v28/: themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/pented/learningapp/: ExampleUnitTest.kt
(+198 files in other folders)
